NULL pointer dereference: meta_wayland_surface_apply_pending_state passes NULL MetaShapedTexture to meta_shaped_texture_set_snippet which does not expect NULL
See https://bugzilla.redhat.com/show_bug.cgi?id=1756854 for a backtrace (with symbols) and other debug information.
From https://gitlab.gnome.org/GNOME/mutter/blob/master/src/wayland/meta-wayland-surface.c#L735 (function meta_wayland_surface_apply_pending_state
):
stex = meta_surface_actor_get_texture (meta_wayland_surface_get_actor (surface));
...
meta_shaped_texture_set_texture (stex, texture);
stex
ends up being NULL when passed to the function meta_shaped_texture_set_texture
. This function assumes stex
is never NULL, and therefore tries to dereference this NULL value.
Without docstrings for function meta_surface_actor_get_texture
, it's not clear whether this function is supposed to ever return NULL.