shaped-texture: Add some more checks

It's common practice in this file to do that. Not having them seems
to produce crashes under very rare conditions.

https://gitlab.gnome.org/GNOME/mutter/issues/838